⛓️ | Update logo link from "#" and add links page

--- a/templates/about.html
+++ b/templates/about.html
@@ -8,29 +8,32 @@
     <title>About</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="#">Website Directory</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="/">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/about">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/contact">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-    </header>
-    <div class="container mt-5">
-        <h1>About Us</h1>
-        <p>We are a Nano merchant directory that helps people find the best websites to spend their Nano cryptocurrency. We hope you enjoy our website!</p>
-    </div>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="/">SpendNano</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/add-link">Add Link</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <div class="container mt-5">
+      <h1>About Us</h1>
+      <p>We are a Nano merchant directory that helps people find the best websites to spend their Nano cryptocurrency. We hope you enjoy our website!</p>
+  </div>
 </body>
