--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="#">Website Directory</a>
+          <a class="navbar-brand" href="/">SpendNano</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -26,6 +26,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/contact">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/add-link">Add Link</a>
               </li>
             </ul>
           </div>
