--- a/templates/index.html
+++ b/templates/index.html
@@ -40,14 +40,14 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Website Directory</a>
+        <a class="navbar-brand" href="/">SpendNano</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about">About</a>
@@ -55,10 +55,13 @@
             <li class="nav-item">
               <a class="nav-link" href="/contact">Contact</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/add-link">Add Link</a>
+            </li>
           </ul>
         </div>
       </nav>
-    </header>
+  </header>
     <main class="container">
       <h1 class="text-center my-5">SpendNano</h1>
       <div class="form-group my-5">
