--- a/templates/addlink.html
+++ b/templates/addlink.html
@@ -6,6 +6,32 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <title>Add a Link</title>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+        const form = document.querySelector("form");
+        form.addEventListener("submit", (event) => {
+          event.preventDefault();
+          const linkName = document.querySelector("#linkName").value;
+          const linkUrl = document.querySelector("#linkUrl").value;
+          const linkDescription = document.querySelector("#linkDescription").value;
+          const data = {
+              "title": linkName,
+              "description": linkDescription,
+              "link": linkUrl
+          };
+          fetch("/add-link", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(data)
+          })
+            .then((response) => response.text())
+            .then((data) => {
+              alert(data);
+            });
+        });
+      });
+    </script>
 </head>
 <body>
     <header>
@@ -26,7 +52,7 @@
                 <a class="nav-link" href="/contact">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/add-link">Add Link</a>
+                <a class="nav-link" href="/addlink">Add Link</a>
               </li>
             </ul>
           </div>
