--- a/templates/contact.html
+++ b/templates/contact.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="/contact">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/add-link">Add Link</a>
+                <a class="nav-link" href="/addlink">Add Link</a>
               </li>
             </ul>
           </div>
