--- a/templates/about.html
+++ b/templates/about.html
@@ -33,7 +33,8 @@
     </nav>
   </header>
   <div class="container mt-5">
-      <h1>About Us</h1>
+      <h1 class="text-center my-5">About Us</h1>
+      <br />
       <p>We are a Nano merchant directory that helps people find the best websites to spend their Nano cryptocurrency. We hope you enjoy our website!</p>
   </div>
 </body>
