--- a/templates/contact.html
+++ b/templates/contact.html
@@ -35,7 +35,7 @@
         </nav>
     </header>
     <div class="container">
-        <h1>Contact Us</h1>
+        <h1 class="text-center my-5">Contact Us</h1>
         <form onsubmit="sendFormData(); return false;">
             <div class="form-group">
                 <label for="username">Reddit/Discord Username</label>
