--- a/templates/addlink.html
+++ b/templates/addlink.html
@@ -59,7 +59,7 @@
         </nav>
     </header>
     <div class="container mt-5">
-        <h1>Add a Link</h1>
+        <h1 class="text-center my-5">Add a Link</h1>
         <form>
           <div class="form-group">
               <label for="linkName">Link Name</label>
