🖌️ | Add FontAwesome and warnings

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>SpendNano</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <script>
       document.addEventListener("DOMContentLoaded", function() {
         const searchBox = document.querySelector("#search-input");
@@ -64,6 +64,15 @@
   </header>
   <main class="container">
       <h1 class="text-center my-5">SpendNano</h1>
+      <div class="container mt-5">
+        <div class="alert alert-warning" role="alert">
+          <img src="https://xno.nano.org/images/xno-badge-blue.png" width="20" height="20"> Donate to us at <b>nano_1b1n1dq3brw7am5zkfoqhqg5aamm9bw9jzm6qrg5dmym31sdg5yewtbeadku</b>! We appreciate all donations!
+        </div>
+        <br>
+        <div class="alert alert-danger" role="alert">
+          <i class="fas fa-exclamation-triangle" style="color: red"></i>  All of the websites on this page are third party, and not affiliated with SpendNano. Please note that these websites could be scams, so use you're common sense before purchasing anything on a website listed here and check reviews.
+        </div>
+      </div>      
       <div class="form-group my-5">
         <input type="text" class="form-control" id="search-input" placeholder="Search for websites">
       </div>
